кот **чутка** перестарался